# toyrust

./: .gitignore  Cargo.toml  README.md  book.toml  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: doc.yml
src/: lib.rs
src/toyrust/: lib.rs.html
toyrust/: all.html  fn.greet.html  index.html
